--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>
-  <script src="Assets/script.js"></script>
+  <script src="./Assets/script.js"></script>
 </body>
 
 </html>
